# portfolio-health-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  NOTES.md  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci-main.yml  ci-pr.yml  ci.yml
alembic/: env.py
alembic/versions/: 7d3b875dd87f_initial_schema.py  c1d2e3f4a5b6_add_drift_runs.py
frontend/: .env.local.example  package-lock.json  package.json  tailwind.config.ts
frontend/app/: layout.tsx  page.tsx
frontend/components/: AgentChat.tsx  PortfolioScorer.tsx
models/: feature_baseline.parquet  health_scorer.ubj
monitoring/: grafana-agent.yaml
monitoring/grafana/: dashboard.json
scripts/: check_drift.py  entrypoint.sh  ingest_prices.py  run_eval.py  seed_ci_data.py
src/: config.py
src/agent/: agent.py  tools.py
src/api/: main.py
src/api/routers/: agent.py  health.py  portfolios.py  scores.py
src/db/: models.py  session.py
src/ml/: features.py  predict.py  train.py
src/monitoring/: metrics.py  prometheus.py
tests/eval/: golden_qa.json  harness.py  judge.py
tests/integration/: test_agent_loop.py
tests/unit/: test_features.py  test_ingest.py  test_monitoring.py  test_tools.py  test_train.py
